@@ -81,12 +81,6 @@ gnome-settings-daemon/modmap-dialog.glade
 gnome-settings-daemon/reaper.c
 libbackground/applier.c
 libbackground/preferences.c
-libgswitchit/gnome-kbd-indicator-test.c
-libgswitchit/gswitchit-config.c
-libgswitchit/gswitchit-plugins-add.c
-libgswitchit/gswitchit-plugins-app.c
-libgswitchit/gswitchit-plugins.desktop.in.in
-libgswitchit/gswitchit-plugins.glade
 libslab/app-shell.c
 libslab/application-tile.c
 libslab/document-tile.c
